--- a/app/views/bulk-order-home-kits/v1/forgot-password.html
+++ b/app/views/bulk-order-home-kits/v1/forgot-password.html
@@ -74,16 +74,16 @@
               {{ pageTitle }}
             </h1>
           </legend>
-          <span class="govuk-body">Enter your username below and we will send a message to reset your password</span>
+          <span class="govuk-body">Enter your email address and we'll send a code to your mobile so you can reset your password.</span>
           <div class="govuk-form-group govuk-!-margin-top-4">
             <label class="govuk-label" for="email-address">
-              Username
+              Email address
             </label>
             <input class="govuk-input govuk-!-width-full" id="email-address" name="email-address" type="text" value="{{ data['email-address'] }}">
           </div>
         </fieldset>
 
-        <button class="govuk-button govuk-!-width-full" data-module="govuk-button">Reset my password</button>
+        <button class="govuk-button govuk-!-width-full" data-module="govuk-button">Continue</button>
 
       </form>
 
