--- a/app/views/bulk-order-home-kits/v1/index.html
+++ b/app/views/bulk-order-home-kits/v1/index.html
@@ -116,7 +116,7 @@
           <input id="order-2-reference" name="order-2-reference" type="number" value="5233577726">
           <input id="order-2-date" name="order-2-date" type="text" value="20 Feb 2022">
           <input id="order-2-recipients" name="order-2-recipients" type="text" value="-">
-          <input id="order-2-status" name="order-2-status" type="text" value="Error">
+          <input id="order-2-status" name="order-2-status" type="text" value="Failed">
 
         </div>
 
