--- a/app/views/bulk-order-home-kits/v1/manage-organisation/index.html
+++ b/app/views/bulk-order-home-kits/v1/manage-organisation/index.html
@@ -46,7 +46,7 @@
           <button class="govuk-!-margin-bottom-4 account-home-button">
             <div>
               <p class="govuk-!-margin-bottom-2">
-                <strong style="color: #005eb8">Manage Home Test Team</strong>
+                <strong style="color: #005eb8">Manage home test team</strong>
               </p>
               <p class="govuk-!-margin-bottom-0">
                 You can add or remove operatives so they can order bulk home test kits too, as well as view recent orders.
