--- a/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-2-updated-confirmation.html
+++ b/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-2-updated-confirmation.html
@@ -25,9 +25,7 @@
       <h1 class="govuk-panel__title">{{ pageTitle }}</h1>
       <p class="govuk-body govuk-!-margin-bottom-1" style="color: #ffffff">
         <strong>
-          {{ data['team-leader-2-first-name'] }} {{ data['team-leader-2-last-name'] }}<br><br>
-          {% if data['team-leader-2-status'] == "Active" %}Active{% else %}Inactive{% endif %}<br><br>
-          {{ data['team-leader-2-mobile-number'] }} / {{ data['team-leader-2-email-address'] }}
+          {{ data['team-leader-2-first-name'] or 'Marie' }} {{ data['team-leader-2-last-name'] or 'Halls' }} – {{ data['team-leader-2-mobile-number'] or '0737669342' }}
         </strong>
       </p>
     </div>
