--- a/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-added-confirmation.html
+++ b/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-added-confirmation.html
@@ -23,7 +23,7 @@
 
     <div class="govuk-panel govuk-panel--confirmation govuk-!-margin-bottom-6">
       <h1 class="govuk-panel__title">{{ pageTitle }}</h1>
-      <p class="govuk-body govuk-!-margin-bottom-1" style="color: #ffffff">
+      <!-- <p class="govuk-body govuk-!-margin-bottom-1" style="color: #ffffff">
         {% if data['team-leader-1-first-name'] != undefined and data['team-leader-2-first-name'] == undefined %}
         <strong>
           {{ data['team-leader-1-first-name'] }} {{ data['team-leader-1-last-name'] }}<br><br>
@@ -45,7 +45,7 @@
           {{ data['team-leader-4-mobile-number'] }} / {{ data['team-leader-4-email-address'] }}
         </strong>
         {% endif %}
-      </p>
+      </p> -->
     </div>
 
     <h2 class="govuk-heading-m">What happens next?</h2>
