--- a/app/views/bulk-order-home-kits/v1/order-kits/index.html
+++ b/app/views/bulk-order-home-kits/v1/order-kits/index.html
@@ -24,16 +24,18 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-    <div class="inline-button-wrapper">
-    
-      <div>
-        <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">{{ pageTitle }}</h1>
-        <p class="govuk-body">Here you can view and track the home test kit orders placed by your team for the last 10 days.</p>
-      </div>
+    <div>
 
-      <a href="/bulk-order-home-kits/{{version}}/order-kits/what-test-package-order" role="button" draggable="false" class="govuk-button" data-module="govuk-button" style="display: inline-block;">
-        Order tests
-      </a>
+      <div class="govuk-!-margin-bottom-6">
+        <p class="govuk-hint">Targeted Surge Testing</p>
+        <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">{{ pageTitle }}</h1>
+        <div class="inline-button-wrapper help-text">
+          <p class="govuk-body">Here you can view and track the home test kit orders placed by your team for the last 10 days.</p>
+          <a href="/bulk-order-home-kits/{{version}}/order-kits/what-test-package-order" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+            Order tests
+          </a>
+        </div>
+      </div>
 
      </div>
 
@@ -44,7 +46,7 @@
             <th scope="col" class="govuk-table__header">Order</th>
             <th scope="col" class="govuk-table__header">Date ordered</th>
             <th scope="col" class="govuk-table__header">Recipients</th>
-            <th scope="col" class="govuk-table__header"></th>
+            <th scope="col" class="govuk-table__header">Status</th>
             <th scope="col" class="govuk-table__header"></th>
           </tr>
         </thead>
@@ -75,7 +77,7 @@
             <th scope="col" class="govuk-table__header">Order</th>
             <th scope="col" class="govuk-table__header">Date ordered</th>
             <th scope="col" class="govuk-table__header">Recipients</th>
-            <th scope="col" class="govuk-table__header"></th>
+            <th scope="col" class="govuk-table__header">Status</th>
             <th scope="col" class="govuk-table__header"><th scope="col" class="govuk-table__header"></th></th>
           </tr>
         </thead>
@@ -122,7 +124,7 @@
               </td>
               <td class="govuk-table__cell">
                 <td class="govuk-summary-list__actions">
-                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-4">
+                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-2">
                     View order<span class="govuk-visually-hidden">view order</span>
                   </a>
                 </td>
