--- a/app/views/bulk-order-home-kits/v1/reset-password-code.html
+++ b/app/views/bulk-order-home-kits/v1/reset-password-code.html
@@ -69,8 +69,12 @@
       <form action="/bulk-order-home-kits/{{version}}/login" method="post">
 
         <fieldset class="govuk-fieldset">
-  
-          <span class="govuk-body">We have sent a password reset code to +44758893729. Enter it below to reset your password.</span>
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
+              {{ pageTitle }}
+            </h1>
+          </legend>
+          <span class="govuk-body">We've sent a code to your mobile.</span>
 
           <div class="govuk-form-group govuk-!-margin-top-4">
             <label class="govuk-label" for="reset-code">
@@ -81,14 +85,20 @@
 
           <div class="govuk-form-group govuk-!-margin-top-4">
             <label class="govuk-label" for="new-password">
-              New password
+              New password<br>
+              <span class="govuk-hint">Must include:</span>
+              <ul class="govuk-list govuk-list--bullet govuk-!-margin-top-2">
+                <li style="color: #626a6e" class="govuk-!-margin-bottom-0">at least 8 characters</li>
+                <li style="color: #626a6e" class="govuk-!-margin-bottom-0">a lower case letter and an upper case letter</li>
+                <li style="color: #626a6e">at special character and a number</li>
+              </ul>
             </label>
             <input class="govuk-input govuk-!-width-full" id="new-password" name="new-password" type="text" value="{{ data['new-password'] }}">
           </div>
 
           <div class="govuk-form-group">
             <label class="govuk-label" for="confirm-password">
-              Enter new password again
+              Confirm new password
             </label>
             <input class="govuk-input govuk-!-width-full" id="confirm-password" name="confirm-password" type="text" value="{{ data['confirm-password'] }}">
           </div>
