--- a/app/views/bulk-order-home-kits/v1/sms-operative.html
+++ b/app/views/bulk-order-home-kits/v1/sms-operative.html
@@ -72,7 +72,7 @@
       <div class="app-text-message">
         <h2 class="govuk-heading-s">UK_Gov</h2>
         <p class="app-text-message__text">
-          Log test site COOVID-19 results service<br>
+          Log test site COVID-19 results service<br>
           Sign in with <a href="#">jwilson@testing.co.uk</a> and temporary password: 03foRLQ_
         </p>
       </div>
