--- a/app/views/share-result-lateral-flow/v23/account-details-from-nhs-account.html
+++ b/app/views/share-result-lateral-flow/v23/account-details-from-nhs-account.html
@@ -1,5 +1,5 @@
 {% set version = "v23" %}
-{% set pageTitle = "Do you want to use these details from your NHS account?" %}
+{% set pageTitle = "Do you want to use these details from your NHS login?" %}
 
 {% extends "includes/layout-LFD.html" %}
 
