--- a/app/views/bulk-order-home-kits/v1/index-manager.html
+++ b/app/views/bulk-order-home-kits/v1/index-manager.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "You are invited to be a PCR (polymerase chain reaction) Home Test Manager" %}
+{% set pageTitle = "You are invited to be a home test manager" %}
 <!DOCTYPE html>
 <!--[if lt IE 9]>
 <html class="lte-ie8" lang="en">
@@ -83,14 +83,17 @@
 
                   <h1 class="govuk-heading-l govuk-!-margin-bottom-6 govuk-!-margin-top-8">{{ pageTitle }}</h1>
 
-                    <p class="govuk-body govuk-!-margin-bottom-1">This service lets you manage bulk PCR home test kit ordering. As a PCR Home Test Manager, you can:</p>
+                    <p class="govuk-body govuk-!-margin-bottom-1">This service lets you manage bulk home test kit ordering. As a home test manager, you can:</p>
                     <ul class="govuk-list govuk-list--bullet">
-                      <li>order home test kits for up to 100 people at a time</li>
-                      <li>add PCR Home Test Operatives so they can order home test kits too</li>
+                      <li>review all orders of bulk home test kits</li>
+                      <li>add home test operatives so they can order home test kits for around 10,000 people</li>
                     </ul>
 
                     <h2 class="govuk-heading-m">What to do next</h2>
-                    <p class="govuk-body">You will receive a text with your temporary password. You must use this within 7 days before it expires. Sign in with your email address as your username.</p>
+                    <p class="govuk-body">
+                      You will receive a text with your temporary password. You must use this within 28 days before it expires. Sign in with your email address as your username.<br><br>
+                      If you're a home test operative, use the same log in details you already have.
+                    </p>
 
                     <p class="govuk-body">Start Now at <a href="/bulk-order-home-kits/{{version}}/login-temporary">https://www.gov.uk/order-coronavirus-bulk-home-tests.gov.uk</a></p>
 
