--- a/app/views/bulk-order-home-kits/v1/login-temporary.html
+++ b/app/views/bulk-order-home-kits/v1/login-temporary.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Sign in with your username and password" %}
+{% set pageTitle = "Sign in" %}
 <!DOCTYPE html>
 <html lang="en"  style="height: 100%; background-color: #909090">
 
@@ -75,17 +75,17 @@
             </h1>
           </legend>
           <div class="govuk-form-group">
-            <label class="govuk-label" for="username">
-              Username
+            <label class="govuk-label" for="email-address">
+              Email address
             </label>
-            <input class="govuk-input govuk-!-width-full" id="username" name="username" type="text" value="{{ data['username'] }}">
+            <input class="govuk-input govuk-!-width-full" id="email-address" name="email-address" type="text" value="{{ data['email-address'] }}">
           </div>
 
           <div class="govuk-form-group">
             <label class="govuk-label" for="temp-password">
               Password
             </label>
-            <input class="govuk-input govuk-!-width-full" id="temp-password" name="temp-password" type="text" value="{{ data['temp-password'] }}">
+            <input class="govuk-input govuk-!-width-full" id="temp-password" name="temp-password" type="password" value="{{ data['temp-password'] }}">
           </div>
         </fieldset>
 
