--- a/app/views/bulk-order-home-kits/v1/manage-organisation/manage-team-leaders.html
+++ b/app/views/bulk-order-home-kits/v1/manage-organisation/manage-team-leaders.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Manage sites" %}
+{% set pageTitle = "Home test team" %}
 
 {% extends "includes/layout.html" %}
 
@@ -21,29 +21,16 @@
 {% block content %}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-
-    <div class="inline-button-wrapper">
-    
+        
       <div>
-        {% if data['team-leader-1-first-name'] == undefined or data['team-leader-1-first-name'] == "" %}
-        <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">0 PCR Home Test Operatives</h1>
-        {% elseif data['team-leader-1-first-name'] and data['team-leader-2-first-name'] == undefined %}
-        <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">1 PCR Home Test Operative</h1>
-        {% elseif data['team-leader-1-first-name'] and data['team-leader-2-first-name'] and data['team-leader-3-first-name'] == undefined %}
-        <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">2 PCR Home Test Operatives</h1>
-        {% elseif data['team-leader-1-first-name'] and data['team-leader-2-first-name'] and data['team-leader-3-first-name'] and data['team-leader-4-first-name'] == undefined %}
-        <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">3 PCR Home Test Operatives</h1>
-        {% else %}
-        <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">4 PCR Home Test Operatives</h1>
-        {% endif %}
-        <p class="govuk-hint">Surge testing</p>
+        <p class="govuk-hint">Targeted Surge Testing</p>
+        <div class="inline-button-wrapper">
+          <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Home test team</h1>
+          <a href="/bulk-order-home-kits/{{version}}/manage-organisation/add-team-leader" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+            Add new operative
+          </a>
+        </div>
       </div>
-
-      <a href="/bulk-order-home-kits/{{version}}/manage-organisation/add-team-leader" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-top-4" data-module="govuk-button" style="display: inline-block;">
-        Add new operative
-      </a>
-
-     </div>
 
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
