--- a/app/views/bulk-order-home-kits/v1/order-kits/confirmation-bulk-upload.html
+++ b/app/views/bulk-order-home-kits/v1/order-kits/confirmation-bulk-upload.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Home test kit order submitted" %}
+{% set pageTitle = "Home test kit order received" %}
 
 {% extends "includes/layout.html" %}
 
@@ -16,7 +16,7 @@
 
     <h2 class="govuk-heading-s govuk-!-margin-top-8">What happens next?</h2>
 
-    <p class="govuk-class govuk-!-margin-bottom-7">You can check the status of this order on the home test kit order history page.</p>
+    <p class="govuk-class govuk-!-margin-bottom-7">You can check the status of this order at the home test kit order history page.</p>
 
     <div class="inline-button-wrapper" style="justify-content: flex-start;">
 
